# c-genericStack

./: .appveyor.yml  CMakeLists.txt  git_subtree_pull.zsh
.github/workflows/: unix.yml  windows.yml
cmake/: MyPackageCheck.cmake  MyPackageCmakeExport.cmake  MyPackageDependency.cmake  MyPackageExecutable.cmake  MyPackageExport.cmake  MyPackageLibrary.cmake  MyPackageMan.cmake  MyPackagePkgConfigExport.cmake  MyPackageStart.cmake
include/: genericStack.h
test/: CMakeLists.txt  genericStack.c
